# advent-of-code

./: .gitignore  Cargo.toml  README.md  daystrap.sh  pyproject.toml
_templates/python/: test_solver.py
_templates/rust/: Cargo.toml
_templates/rust/src/: lib.rs  main.rs
_templates/rust/tests/: tests.rs
advent_of_code/2021/day_01/: test_aoc_2021_01.py
advent_of_code/2021/day_02/: test_aoc_2021_02.py
advent_of_code/2021/day_03/: test_aoc_2021_03.py
advent_of_code/2021/day_06/: test_aoc_2021_06.py
advent_of_code/2022/day_01/: aoc_2022_01.py  test_aoc_2022_01.py
advent_of_code/2022/day_02/: test_aoc_2022_02.py
advent_of_code/2022/day_03/: aoc_2022_03.py  test_aoc_2022_03.py
advent_of_code/2022/day_14/: elements.py  (+5 more)
advent_of_code/common/: Cargo.toml
advent_of_code/templates/: solver.py  test_solver.py
advent_of_code/util/: daystrapper.py  perf.py
advent_of_code_2022/day_01/: aoc_2022_01.py  test_aoc_2022_01.py
advent_of_code_2022/day_02/: aoc_2022_02.py  test_aoc_2022_02.py
advent_of_code_2022/day_03/: aoc_2022_03.py  test_aoc_2022_03.py
advent_of_code_2022/day_04/: aoc_2022_04.py  test_aoc_2022_04.py
advent_of_code_2022/day_05/: aoc_2022_05.py  data-init.csv  example-init.csv  example-init.txt  test_aoc_2022_05.py
advent_of_code_2022/day_06/: aoc_2022_06.py  test_aoc_2022_06.py
advent_of_code_2022/day_07/: aoc_2022_07.py  test_aoc_2022_07.py
advent_of_code_2022/day_08/: aoc_2022_08.py  test_aoc_2022_08.py
advent_of_code_2022/day_09/: aoc_2022_09.py  test_aoc_2022_09.py
advent_of_code_2022/day_10/: aoc_2022_10.py  test_aoc_2022_10.py
advent_of_code_2022/day_11/: aoc_2022_11.py  test_aoc_2022_11.py
advent_of_code_2022/day_12/: aoc_2022_12.py  test_aoc_2022_12.py
advent_of_code_2022/day_13/: aoc_2022_13.py  test_aoc_2022_13.py
advent_of_code_2022/day_14/: aoc_2022_14.py  arguments.py  data.txt  elements.py  grid.py  simulation.py  test_aoc_2022_14.py  test_grid.py
advent_of_code_2022/day_15/: aoc_2022_15.py  coord.py  grid.py  scan_coverage.py  sensor.py  test_aoc_2022_15.py  test_sensor.py
advent_of_code_2022/day_19/: aoc_2022_19.py  blueprint.py  brute_force_factory.py  factory.py  inventory.py  material.py  optimized_factory.py  robots.py  test_aoc_2022_19.py
advent_of_code_2022/day_22/: aoc_2022_22.py  coord.py  direction.py  elements.py  grid.py  player.py  simulation.py  test_aoc_2022_22.py  test_grid.py  test_instructions.py
advent_of_code_2022/day_23/: aoc_2022_23.py  coords.py  data.txt  elements.py  grid.py  simulation.py  test_aoc_2022_23.py  test_grid.py
advent_of_code_2022/day_25/: aoc_2022_25.py  converter.py  test_aoc_2022_25.py  test_converter.py
advent_of_code_2022/templates/: solver.py  test_solver.py
advent_of_code_2022/util/: daystrapper.py  perf.py
y2025/day_01/: Cargo.toml
(+171 files in other folders)
