[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Malanius Privierre <malaniusprivierre@gmail.com>"]
readme = "README.md"
packages = [{ include = "advent_of_code" }]

[tool.poetry.dependencies]
python = "^3.12"
advent-of-code-data = "^2.0.1"
parse = "^1.20.0"
numpy = "^1.26.2"
colorama = "^0.4.6"
pandas = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
daystrap = "advent_of_code_2022.util.daystrapper:main"

[tool.pytest.ini_options]
addopts = "--ignore=advent_of_code/templates/test_solver.py"
