[project]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = [
    { name = "Malanius Privierre", email = "malaniusprivierre@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "advent-of-code-data>=2.0.4",
    "bpython>=0.24",
    "colorama>=0.4.6",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "parse>=1.20.2",
    "pyparsing>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
daystrap = "advent_of_code.util.daystrapper:main"

[tool.pytest.ini_options]
addopts = "--ignore=advent_of_code/templates/test_solver.py"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.8.1",
]
