[project]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = [
    { name = "Malanius Privierre", email = "malaniusprivierre@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "advent-of-code-data>=2.1.0",
    "colorama>=0.4.6",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "parse>=1.20.2",
    "pyparsing>=3.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
daystrap = "advent_of_code.util.daystrapper:main"

[tool.pytest.ini_options]
addopts = "--ignore=advent_of_code/templates/test_solver.py"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]
